--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^13.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
+    "env-cmd": "^10.1.0",
     "express": "^4.18.1",
+    "mariadb": "^3.1.0",
     "mysql": "github:mysqljs/mysql",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,7 +23,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "node src/server.js"
+    "server": "node src/server.js", 
+    "build:staging": "env-cmd -f .env.staging npm run build",
+    "build:production": "env-cmd -f .env.production npm run build"
   },
   "eslintConfig": {
     "extends": [
